using UnityEngine;

namespace Sample.FlyWeight.Sample2
{
    public interface IBullet
    {
        public void Shot();
    }
}